--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
   </div>
   <div >
-    <button class="filter-btn" onclick="toggleFilterMenu()">Filter</button>
+    <button class="filter-btn" onclick="toggleFilterMenu()">Price⚙️</button>
     <div id="filter-menu" class="filter-menu">
       <button onclick="filterPrice('low-to-high')">Low to High</button>
       <button onclick="filterPrice('high-to-low')">High to Low</button>
