--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="navbar">
     <div class="categories">
-      <button onclick="showCategory('stages')">Stages</button>
+      <button onclick="showCategory('events')">Events</button>
       <button onclick="showCategory('catering')">Catering</button>
       <button onclick="showCategory('lights')">Lights</button>
       <button onclick="showCategory('sounds')">Sounds</button>
@@ -32,11 +32,9 @@
     </div>
   </div>
   <div id="product-list" class="product-list"></div>
-
+  <div class="blank-space"></div>
   <button class="purchase-btn" onclick="showOrderForm()">‎ ‎ Purchase<img src="assets/whatsapplogo.png" alt="WhatsApp" style="width: 55px; height: 55px;"></button>
-  
-
-  <div id="cart" class="cart">
+<div id="cart" class="cart">
     <div class="cart-header">
       <h3>Your Cart</h3>
       <span class="close-btn" onclick="toggleCart(false)">✖</span>
