--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="navbar">
     <div class="categories">
       <button onclick="showCategory('events')">Events</button>
-      <button onclick="showCategory('catering')">Catering</button>
+      <button onclick="showCategory('entrance')">Entrance</button>
       <button onclick="showCategory('lights')">Lights</button>
       <button onclick="showCategory('sounds')">Sounds</button>
 
