--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
   <div class="navbar">
     <div class="categories">
-      <button onclick="showCategory('events')">Events</button>
+      <button onclick="showCategory('stages')">Stages</button>
       <button onclick="showCategory('entrance')">Entrance</button>
-      <button onclick="showCategory('lights')">Lights</button>
-      <button onclick="showCategory('sounds')">Sounds</button>
+      <button onclick="showCategory('catering')">Catering</button>
+      <button onclick="showCategory('other')">Other</button>
 
     </div>
 
