--- a/index.html
+++ b/index.html
@@ -61,11 +61,16 @@
     <div class="order-form-box">
       <h2>Order Details</h2>
       <input type="text" id="buyer-name" placeholder="Name" required>
-      <input type="number" id="phone-number" placeholder="Phone Number" required>
-      <input type="text" id="buyer-place" placeholder="Place" required>
-      <input type="text" id="event-type" placeholder="Event Type / Style (e.g. Marriage)" required>
-      <input type="date" id="event-date" required>
-      <input type="time" id="event-time" required>
+<input type="text" id="name" placeholder="Name" required>
+<input type="number" id="phone-number" placeholder="Phone Number" required>
+<input type="text" id="buyer-place" placeholder="Place" required>
+<input type="text" id="event-type" placeholder="Event Type / Style (e.g. Marriage)" required>
+
+<label for="event-date">Event Date:</label>
+<input type="date" id="event-date" required>
+
+<label for="event-time">Event Time:</label>
+<input type="time" id="event-time" required>
       <textarea id="order-note" placeholder="Order Note (e.g. Suggestions...)"></textarea>
       <button onclick="sendToWhatsApp()">Order on WhatsApp</button>
       <button onclick="hideOrderForm()">Cancel</button>
